// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password Reset with invalid email 1`] = `
Object {
  "feedback": Object {
    "email": Array [
      "A valid email is required.",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`Password Reset with invalid password 1`] = `
Object {
  "feedback": Object {
    "password": Array [
      "Repeats like \\"abcabcabc\\" are only slightly harder to guess than \\"abc\\"",
      "Add another word or two. Uncommon words are better.",
      "Avoid repeated words and characters",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`Password Reset with invalid token 1`] = `
Object {
  "message": "Invalid token",
}
`;

exports[`Password Reset with valid data 1`] = `
Object {
  "date": Any<String>,
  "envelope": Object {
    "from": Object {
      "address": "",
      "args": false,
    },
    "host": "[127.0.0.1]",
    "remoteAddress": "172.19.0.1",
    "to": Array [
      Object {
        "address": "password_reset_test@example.com",
        "args": false,
      },
    ],
  },
  "headers": Any<Object>,
  "html": "
<!DOCTYPE html PUBLIC \\"-//W3C//DTD XHTML 1.0 Transitional//EN\\" \\"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd\\">
<html xmlns=\\"http://www.w3.org/1999/xhtml\\">
<head>
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
  <meta http-equiv=\\"content-type\\" content=\\"text/html; charset=utf-8\\" />
  <style type=\\"text/css\\" rel=\\"stylesheet\\" media=\\"all\\">
@media only screen and (max-width: 600px) {
  .email-body_inner,
.email-footer {
    width: 100% !important;
  }
}
@media only screen and (max-width: 500px) {
  .button {
    width: 100% !important;
  }
}
</style>
</head>
<body dir=\\"ltr\\" style=\\"height: 100%; margin: 0; line-height: 1.4; background-color: #F2F4F6; color: #74787E; -webkit-text-size-adjust: none; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; -webkit-box-sizing: border-box; box-sizing: border-box; width: 100%;\\">
  <table class=\\"email-wrapper\\" width=\\"100%\\" cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; -webkit-box-sizing: border-box; box-sizing: border-box; width: 100%; margin: 0; padding: 0; background-color: #F2F4F6;\\" bgcolor=\\"#F2F4F6\\">
    <tr>
      <td align=\\"center\\" style=\\"font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; -webkit-box-sizing: border-box; box-sizing: border-box;\\">
        <table class=\\"email-content\\" width=\\"100%\\" cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; -webkit-box-sizing: border-box; box-sizing: border-box; width: 100%; margin: 0; padding: 0;\\">
          <!-- Logo -->
          <tr>
            <td class=\\"email-masthead\\" style=\\"font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; -webkit-box-sizing: border-box; box-sizing: border-box; padding: 25px 0; text-align: center;\\" align=\\"center\\">
              <a class=\\"email-masthead_name\\" href=\\"http://localhost\\" target=\\"_blank\\" style=\\"font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; -webkit-box-sizing: border-box; box-sizing: border-box; font-size: 16px; font-weight: bold; color: #2F3133; text-decoration: none; text-shadow: 0 1px 0 white;\\">
                
                  @ianwalter/nrg
                
                </a>
            </td>
          </tr>
          <!-- Email Body -->
          <tr>
            <td class=\\"email-body\\" width=\\"100%\\" style=\\"font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; -webkit-box-sizing: border-box; box-sizing: border-box; width: 100%; margin: 0; padding: 0; border-top: 1px solid #EDEFF2; border-bottom: 1px solid #EDEFF2; background-color: #FFF;\\" bgcolor=\\"#FFF\\">
              <table class=\\"email-body_inner\\" align=\\"center\\" width=\\"570\\" cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; -webkit-box-sizing: border-box; box-sizing: border-box; width: 570px; margin: 0 auto; padding: 0;\\">
                <!-- Body content -->
                <tr>
                  <td class=\\"content-cell\\" style=\\"font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; -webkit-box-sizing: border-box; box-sizing: border-box; padding: 35px;\\">
                    <h1 style=\\"margin-top: 0; color: #2F3133; font-size: 19px; font-weight: bold; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; -webkit-box-sizing: border-box; box-sizing: border-box;\\">Hi Password Reset,</h1>
                    

                    <!-- Dictionary -->
                    

                    <!-- Table -->
                    

                    <!-- Action -->
                    
                                              <p style=\\"margin-top: 0; color: #74787E; font-size: 16px; line-height: 1.5em; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; -webkit-box-sizing: border-box; box-sizing: border-box;\\">Click the button below to reset your password:</p>
                        <!--[if mso]>
                          <center>
                            <v:roundrect xmlns:v=\\"urn:schemas-microsoft-com:vml\\" xmlns:w=\\"urn:schemas-microsoft-com:office:word\\" href=\\"http://localhost:9999/password-reset?email=password_reset_test%40example.com&token=<~ TOKEN WAS HERE ~>\\" style=\\"height: 45px; v-text-anchor: middle; width: 200px;\\" arcsize=\\"10%\\" stroke=\\"f\\" fillcolor=\\"#3869D4\\">
                              <w:anchorlock/>
                              <center style=\\"color: #ffffff; font-family: sans-serif; font-size: 15px;\\">
                                Reset your password
                              </center>
                            </v:roundrect>
                          </center>
                        <![endif]-->
                        <![if !mso]>
                          <table class=\\"body-action\\" align=\\"center\\" cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; -webkit-box-sizing: border-box; box-sizing: border-box; width: 100%; margin: 30px auto; padding: 0; text-align: center;\\" width=\\"100%\\">
                            <tr>
                              <td align=\\"center\\" style=\\"font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; -webkit-box-sizing: border-box; box-sizing: border-box;\\">
                                <a href=\\"http://localhost:9999/password-reset?email=password_reset_test%40example.com&token=<~ TOKEN WAS HERE ~>\\" class=\\"button\\" target=\\"_blank\\" style=\\"font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; -webkit-box-sizing: border-box; box-sizing: border-box; display: inline-block; width: 200px; border-radius: 3px; color: #ffffff; font-size: 15px; line-height: 45px; text-align: center; text-decoration: none; -webkit-text-size-adjust: none; mso-hide: all; background-color: #3869D4;\\">
                                  Reset your password
                                </a>
                              </td>
                            </tr>
                          </table>
                        <![endif]>
                                          

                    <!-- Support for Gmail Go-To Actions -->
                    

                    

                    
                      <p style=\\"margin-top: 0; color: #74787E; font-size: 16px; line-height: 1.5em; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; -webkit-box-sizing: border-box; box-sizing: border-box;\\">
                        Yours truly,
                        <br>
                        @ianwalter/nrg
                      </p>
                    
                  </td>
                </tr>
              </table>
            </td>
          </tr>
          <tr>
            <td style=\\"font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; -webkit-box-sizing: border-box; box-sizing: border-box;\\">
              <table class=\\"email-footer\\" align=\\"center\\" width=\\"570\\" cellpadding=\\"0\\" cellspacing=\\"0\\" style=\\"font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; -webkit-box-sizing: border-box; box-sizing: border-box; width: 570px; margin: 0 auto; padding: 0; text-align: center;\\">
                <tr>
                  <td class=\\"content-cell\\" style=\\"font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; -webkit-box-sizing: border-box; box-sizing: border-box; padding: 35px;\\">
                    <p class=\\"sub center\\" style=\\"margin-top: 0; line-height: 1.5em; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; -webkit-box-sizing: border-box; box-sizing: border-box; color: #AEAEAE; font-size: 12px; text-align: center;\\">
                      &copy; 2020 <a href=\\"http://localhost\\" target=\\"_blank\\" style=\\"color: #3869D4; font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; -webkit-box-sizing: border-box; box-sizing: border-box;\\">@ianwalter/nrg</a>. All rights reserved.
                    </p>
                  </td>
                </tr>
              </table>
            </td>
          </tr>
        </table>
      </td>
    </tr>
  </table>
</body>
</html>
",
  "id": Any<String>,
  "messageId": Any<String>,
  "priority": "normal",
  "read": false,
  "source": Any<String>,
  "subject": "@ianwalter/nrg Password Reset",
  "time": Any<String>,
  "to": Array [
    Object {
      "address": "password_reset_test@example.com",
      "name": "",
    },
  ],
}
`;

exports[`Password Reset with valid data 2`] = `
Object {
  "email": "password_reset_test@example.com",
  "emailVerified": true,
  "firstName": "Password Reset",
  "id": 2,
  "lastName": "Test",
}
`;

exports[`Password Reset with valid data 3`] = `
Object {
  "email": "password_reset_test@example.com",
  "emailVerified": true,
  "firstName": "Password Reset",
  "id": 2,
  "lastName": "Test",
}
`;
